welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {     //Faire V
var i = 0
def faireV(c: Color) {

avance()
baisseBrosse()
gauche()
leveBrosse()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
avance()
droite()
avance()
baisseBrosse()
leveBrosse()
gauche()
avance()
gauche()

}

faireV(color.GREEN)



















}
